--- a/index2.html
+++ b/index2.html
@@ -20,33 +20,42 @@
     <main>
         <div class="restaurant">
             <h1>Check it Out</h1>
-            <img src="Restaurant Branding in India _ A successful….jpeg" alt="hero.img">
+            <img src="Indulge in the ultimate fine dining experience in….jpeg" alt="hero-img">
         </div>
         </main>
         <main>
         
-        <div class="menu">
+        <div class="about">
             <!--About section-->
             <h1>OUR MENU </h1>
-             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque, eligendi veniam inventore aspernatur eveniet laborum, aut reprehenderit nostrum hic repellat animi quos. Tenetur repellendus veritatis sed, dolorum fuga suscipit illo.</p>
-             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatem corrupti quidem vero? Cum quisquam ex corrupti sint eius veniam minima iure! Quas ut, numquam assumenda vel harum aliquid similique sequi.</p>
+             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque, eligendi veniam inventore aspernatur eveniet laborum, aut reprehenderit nostrum hic repellat animi quos. Tenetur repellendus veritatis sed, dolorum fuga suscipit illo.
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatem corrupti quidem vero? Cum quisquam ex corrupti sint eius veniam minima iure! Quas ut, numquam assumenda vel harum aliquid similique sequi.</p>
              <img src="2f08cbb5-2711-461c-aa74-6f22f834e172.jpeg" alt="menu">
         </div>
+        
+
+         <!--Menu items section-->
         <div class="menu-items">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia est sunt aliquam reprehenderit eligendi consectetur dolore porro tempora debitis dignissimos aut, totam possimus recusandae ipsam dolorem earum blanditiis laudantium rerum?</p>
-    </main>
-    <main>
+            <h1>MENU ITEMS </h1>
+             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime quaerat quo quas ea illum ut incidunt. Ipsa et tenetur, eum alias voluptate, totam deleniti nisi labore quasi animi, quas est.</p>
+             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque, eligendi veniam inventore aspernatur eveniet laborum, aut reprehenderit nostrum hic repellat animi quos.Tenetur repellendus veritatis sed, dolorum fuga suscipit illo.
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aspernatur impedit quia, maxime, ea officiis natus laborum quo beatae facere ipsa exercitationem numquam molestias asperiores nostrum non obcaecati doloremque. Aliquam, sint!
+             </p>
+            <img src="_Everyone loves dessert, especially when it’s a….jpeg" alt="">
+
 
         <!--Dessert section-->
         <div class="desserts">
             <h1>DESSERTS </h1>
-             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque, eligendi veniam inventore aspernatur eveniet laborum, aut reprehenderit nostrum hic repellat animi quos. Tenetur repellendus veritatis sed, dolorum fuga suscipit illo.</p>
+             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque, eligendi veniam inventore aspernatur eveniet laborum, aut reprehenderit nostrum hic repellat animi quos.Tenetur repellendus veritatis sed, dolorum fuga suscipit illo.
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aspernatur impedit quia, maxime, ea officiis natus laborum quo beatae facere ipsa exercitationem numquam molestias asperiores nostrum non obcaecati doloremque. Aliquam, sint!
+             </p>
+             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime quaerat quo quas ea illum ut incidunt. Ipsa et tenetur, eum alias voluptate, totam deleniti nisi labore quasi animi, quas est.</p>
              <img src="8045f62a-6c1d-4159-ad8a-e12ddecfb207.jpeg" alt="desserts">
-             <img src="8045f62a-6c1d-4159-ad8a-e12ddecfb207.jpeg" alt="deserts">
                 <h4>This is $250</h4>
     </main>
     <footer>
-        <p>&copy; 2025 My Restaurant. All rights reserved.</p>
+        <p class="footer"> &copy; 2024 Pretty Coding. All rights reserved.</p>
     </footer>
 </body>
 </html>
